# market-population-dynamics

./: .gitignore  CLAUDE.md  README.md  mock.ipynb  pyproject.toml
notebooks/: 01_base_model_prototype.ipynb  02_endogenous_dynamics.ipynb
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: agents.rs  lib.rs  replicator.rs  simulation.rs  types.rs
src/: __init__.py  agents.py  analysis.py  replicator.py  simulation.py  visualization.py
tests/: test_agents.py  test_replicator.py  test_rust_parity.py  test_simulation.py
